--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,9 +1,11 @@
 <section id="banner">
-  <h2>{{ .Site.Params.title }}</h2>
-  <p>{{ .Site.Params.subtitle }}</p>
-  <ul class="actions special">
-    {{ range .Params.Banner.button }}
-      <li><a href="{{ .url | relURL }}" class="button {{ .type }}">{{ .text }}</a></li>
-    {{ end }}
-  </ul>
+  <div id="banner-txtbg">
+    <h2>{{ .Site.Params.title }}</h2>
+    <p>{{ .Site.Params.subtitle }}</p>
+    <ul class="actions special">
+      {{ range .Params.Banner.button }}
+        <li><a href="{{ .url | relURL }}" class="button {{ .type }}">{{ .text }}</a></li>
+      {{ end }}
+    </ul>
+  </div>
 </section>
