--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1373,16 +1373,34 @@
 
 /* Banner */
 
+
 	#banner {
 		background-attachment:	scroll,							fixed;
+		{{ with .Site.Params.Banner.image }}
 		background-color:		#666;
-		background-image:		url({{ "img/overlay.png" | relURL }}), url({{ .Site.Params.Banner.image | relURL }});
+		background-image:		url({{ "img/overlay.png" | relURL }}), url({{ . | relURL }});
+		{{ end }}
 		background-position:	top left,						center center;
 		background-repeat:		repeat,							no-repeat;
 		background-size:		auto,							cover;
 		color: #fff;
 		padding: 12em 0 20em 0;
 		text-align: center;
+
+		> video {
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100vw;
+			object-fit: cover;
+			z-index: -1;
+			&.video-loading {
+				background-image: url({{ "img/banner-tn.jpg" | relURL }});
+				background-repeat: no-repeat;
+				background-size: cover;
+				filter: blur(10px);
+			}
+		}
 
 		> #banner-txtbg {
 			-webkit-backdrop-filter: blur(10px) brightness(75%);
@@ -1441,7 +1459,17 @@
 /* Main */
 
 	#main {
-		padding: 4em 0;
+		padding: 4em 0 0 0;
+
+		&::before { /* to cover the video background on home page */
+			/* can't use position: absolute; it triggers weird rerendering */
+			display: block;
+			width: 150vw; /* overflow-x: hidden for #page-wrapper */
+			height: 71rem;
+			margin: 10rem 0 -82rem -30vw; /* 1. NEED REFIT TO CONTENT 2. DOESN'T WORK ON NARROWER */
+			content: '';
+			background: _palette(bg);
+		}
 
 		> header {
 			text-align: center;
