change theme color

--- a/assets/scss/libs/_vars.scss
+++ b/assets/scss/libs/_vars.scss
@@ -52,27 +52,27 @@ $palette: (
     fg-light: mix(#666, #ffffff, 40%)
   ),
   accent2: (
-    bg: #e89980,
-    fg: mix(#e89980, #ffffff, 25%),
+    bg: #a11c39,
+    fg: mix(#a11c39, #ffffff, 25%),
     fg-bold: #ffffff,
-    fg-light: mix(#e89980, #ffffff, 40%)
+    fg-light: mix(#a11c39, #ffffff, 40%)
   ),
   accent3: (
-    bg: #7fcdb8,
-    fg: mix(#7fcdb8, #ffffff, 25%),
+    bg: #40826d,
+    fg: mix(#40826d, #ffffff, 25%),
     fg-bold: #ffffff,
-    fg-light: mix(#7fcdb8, #ffffff, 40%)
+    fg-light: mix(#40826d, #ffffff, 40%)
   ),
   accent4: (
-    bg: #90b0ba,
-    fg: mix(#90b0ba, #ffffff, 25%),
+    bg: #645394,
+    fg: mix(#645394, #ffffff, 25%),
     fg-bold: #ffffff,
-    fg-light: mix(#90b0ba, #ffffff, 40%)
+    fg-light: mix(#645394, #ffffff, 40%)
   ),
   accent5: (
-    bg: #e5cb95,
-    fg: mix(#e5cb95, #ffffff, 25%),
+    bg: #c2b280,
+    fg: mix(#c2b280, #ffffff, 25%),
     fg-bold: #ffffff,
-    fg-light: mix(#e5cb95, #ffffff, 40%)
+    fg-light: mix(#c2b280, #ffffff, 40%)
   )
 );
