--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1578,7 +1578,7 @@
 
 	#footer {
 		background: #f0f0f0;
-		padding: 4em 0 6em 0;
+		padding: 2em 0 4em 0;
 		text-align: center;
 
 		.icons {
@@ -1643,6 +1643,7 @@
 			margin: 2em auto;
 			width: 16em;
 			font-size: 1.2rem;
+			line-height: 1.5em;;
 		}
 
 		form {
