--- a/layouts/index.html
+++ b/layouts/index.html
@@ -76,8 +76,8 @@
 			{{ "<!-- CTA -->" | safeHTML }}
 				<section id="cta"><a name="call-to-action"></a>
 
-					<h2>{{ .Params.CTA.heading}}</h2>
-					<p>{{ .Params.CTA.message}}</p>
+					<!--<h2>{{ .Params.CTA.heading }}</h2>
+					<p>{{ .Params.CTA.message }}</p>-->
 					{{ partial "contact" . }}
 
 				</section>
