post list layout

--- a/assets/scss/libs/_vars.scss
+++ b/assets/scss/libs/_vars.scss
@@ -40,7 +40,7 @@ $palette: (
   border2: #dddddd,
   border2-bg: #f0f0f0,
   header: (
-    bg: #444,
+    bg: #a11c39,
     fg: #bbb,
     fg-bold: #fff,
     fg-light: #999
