--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1307,6 +1307,11 @@
 						}
 					}
 
+					i.fa-language {
+						font-size: 1.7em;
+						vertical-align: sub;
+					}
+
 					.button {
 						margin: 0 0 0 0.5em;
 						position: relative;
