--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 {{ partial "header" . .Section "list" }}
-{{ partialCached "nav" . .Section }}
+{{ partial "nav" . .Section }}
 
 {{ block "main" . }}
 {{ end }}
