--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -10,7 +10,7 @@
     <p>{{ .Site.Params.subtitle }}</p>
     <ul class="actions special">
       {{ range .Params.Banner.button }}
-        <li><a href="{{ .url | relURL }}" class="button {{ .type }}">{{ .text }}</a></li>
+        <li><a href="{{ .url | relLangURL }}" class="button {{ .type }}">{{ .text }}</a></li>
       {{ end }}
     </ul>
   </div>
